--- a/.env
+++ b/.env
@@ -25,6 +25,7 @@ APP_SECRET=aa236526fec4d1310be367338ae22484
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://329608:projetsortie@mysql-projet-sortie.alwaysdata.net:3306/projet-sortie_database?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="mysql://329608:projetsortie@mysql-projet-sortie.alwaysdata.net:3306/projet-sortie_test-fixtures?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
