--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 ###> symfony/framework-bundle ###
-/blabla.env.local
+/.env.local
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
